add: new tests: controllers tests